[package]
name = "sk-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["query", "json"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
chrono = { version = "0.4.45", features = ["serde"] }
cookie = "0.18.1"
getrandom = "0.4.3"
hex = "0.4.3"
reqwest = { version = "0.13.4", features = ["json", "form"] }
serde = "1.0.228"
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
time = "0.3.53"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.18", features = [
    "with-uuid-1",
    "with-time-0_3",
    "with-chrono-0_4",
] }
uuid = { version = "1.23.4", features = ["v4"] }
